Refactor image handling to store data as byte arrays.
Replaced file path-based storage with byte array storage for images. Updated `Image` model, `ImageService`, and related methods to manage image data in-memory. Added `ImageController` for serving and deleting images and improved placeholder handling in `LibriController`.